@@ -8,6 +8,7 @@ Revision history for Perl extension Monitoring::Availability.
     - implemented service availability calculation
     - implemented hostdowntimes
     - implemented servicedowntimes
+    - implemented hosts
 
 0.01  Fri Jan 15 16:40:00 CET 2010
     - initial version
